# milvus_client

./: CMakeLists.txt  install_milvus_sdk.sh  main.cpp  readme.md  test.cpp
src/: MilvusClient.cpp  MilvusClient.h  main.cpp
